<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical"
    android:background="@drawable/bg">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="48dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/welcome_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_welcome"
            android:fontFamily="@font/poppins"
            android:text="@string/welcome_subtitle"
            android:textColor="@color/gray_700" />

        <Button
            android:id="@+id/button_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="@font/poppins_medium"
            android:padding="12dp"
            android:text="@string/button_enter"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>